log
Tue 07 May 2024 05:27:26 PM UTC: 
 tests:  1|8
total_score: 0/70
961f256
Tue 07 May 2024 08:17:04 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:23: error: ‘lt’ undeclared (first use in this function)
   47 |     map->lower_than = lt;
      |                       ^~
treemap.c:47:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
34d2f1a
Tue 07 May 2024 08:18:17 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5adba4c
Tue 07 May 2024 08:20:42 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  6|7
total_score: 5/70
93edc89
Tue 07 May 2024 08:21:45 PM UTC: 
 treemap.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:16: error: unused variable ‘current’ [-Werror=unused-variable]
   83 |     TreeNode * current = tree->root;
      |                ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
84b00e1
Tue 07 May 2024 08:22:34 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
9f515be
Tue 07 May 2024 08:24:19 PM UTC: 
 treemap.c | 38 +++++++++++++++++---------------------
 1 file changed, 17 insertions(+), 21 deletions(-)
 tests:  6|7
total_score: 5/70
2cb4192
Tue 07 May 2024 08:25:57 PM UTC: 
 treemap.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
 tests:  6|7
total_score: 5/70
77f9350
Tue 07 May 2024 08:27:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ba81d74
Tue 07 May 2024 08:27:59 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
7015e39
Tue 07 May 2024 08:28:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f4f230f
Tue 07 May 2024 08:28:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
b00253e
Tue 07 May 2024 08:30:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
61122cc
Tue 07 May 2024 08:30:18 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
df3d20f
Tue 07 May 2024 08:32:52 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
6df169d
Tue 07 May 2024 08:33:04 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
de36326
Tue 07 May 2024 08:33:13 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
adc7731
Tue 07 May 2024 08:33:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
4e999a1
Tue 07 May 2024 08:37:39 PM UTC: 
 treemap.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  6|7
total_score: 5/70
9144b60
Tue 07 May 2024 08:39:05 PM UTC: 
 treemap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  8|7
total_score: 5/70
c7e0385
Tue 07 May 2024 08:39:46 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
ac78ec6
Tue 07 May 2024 08:40:58 PM UTC: 
 treemap.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  8|7
total_score: 5/70
b2a2a8d
Tue 07 May 2024 08:42:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
fea8ab1
Tue 07 May 2024 08:42:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
6f5c7f6
Tue 07 May 2024 08:45:40 PM UTC: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
e67a930
Tue 07 May 2024 08:47:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0be24cb
Tue 07 May 2024 08:48:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
68d9e2f
Tue 07 May 2024 08:49:18 PM UTC: 
 treemap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  8|7
total_score: 5/70
3ab2622
Tue 07 May 2024 08:50:41 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
b13be5d
Tue 07 May 2024 08:50:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
d964a2b
Tue 07 May 2024 08:52:05 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
c4cc1f8
Tue 07 May 2024 08:59:14 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  10|6
total_score: 15/70
5fa8f9e
Tue 07 May 2024 09:00:52 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  13|5
total_score: 25/70
4b39082
Tue 07 May 2024 09:02:48 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
9475985
